app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Bad+Script&family=Bangers&family=Barlow:wght@300;400&family=Bebas+Neue&family=Cabin+Sketch:wght@400;700&family=Castoro&family=Cinzel:wght@500;600;700&family=Comfortaa:wght@400;500&family=Dosis:wght@300;400&family=Fredoka:wght@300&family=Gloria+Hallelujah&family=Halant:wght@300&family=IBM+Plex+Sans:wght@100;200;300;500&family=Josefin+Sans:ital,wght@0,200;0,500;1,100&family=Lato&family=Lobster&family=M+PLUS+1:wght@200&family=Marcellus+SC&family=Maven+Pro:wght@500;600&family=Montserrat+Alternates:wght@100&family=Montserrat:wght@100;400&family=Mukta:wght@200&family=Nanum+Gothic:wght@700&family=News+Cycle&family=Newsreader:opsz,wght@6..72,200;6..72,400&family=Noto+Sans&family=Nunito+Sans&family=Open+Sans:wght@400;500&family=Oswald&family=PT+Sans+Narrow:wght@400;700&family=Phudu:wght@300;400&family=Playfair+Display:wght@500;900&family=Poppins&family=Press+Start+2P&family=Prompt&family=Quicksand:wght@300;400&family=Raleway:ital,wght@0,200;0,500;1,400&family=Readex+Pro:wght@600&family=Reem+Kufi+Fun:wght@400;500&family=Roboto:ital,wght@0,100;1,400&family=Rubik+Vinyl&family=Sarabun:wght@200&family=Satisfy&family=Signika:wght@300&family=Source+Code+Pro:wght@300;700&family=Syncopate:wght@400;700&family=Tajawal&family=Ubuntu:ital,wght@0,300;1,700&family=Varela+Round&display=swap");

* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  font-family: "Barlow", sans-serif;
  /* background: black; */
}

::-webkit-scrollbar {
  display: none;
}

.heading_of_app {
  margin-top: 7rem;
}

.logo_text {
  font-weight: 700;
  font-family: "Barlow", sans-serif;
}

.main_lofi {
  margin-top: 3.5rem;
}
.container {
  margin: 0px 8rem 0px 8rem;
}

.social_link {
  transition: all 0.2s linear;
}

.navbar {
  background: rgba(255, 255, 255, 0);
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(7.8px);
  -webkit-backdrop-filter: blur(7.8px);
  width: 83%;
  position: fixed;
  top: 0px;
  z-index: 100;
}

@media (max-width: 1225px) {
  .navbar {
    width: 75%;
  }
}

@media (max-width: 859px) {
  .navbar {
    width: 65%;
  }
}

.icon_lofi {
  /* background: linear-gradient(to right, #87ceeb, #ff69b4);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent; */
  color: rgb(191, 100, 248);
  font-size: 1.2rem;
}

.head_text {
  font-size: 3rem;
  font-family: "Barlow", sans-serif;
  font-weight: 800;
  color: white;
}

.dot {
  color: white;
  font-size: 3rem;
}

.heading_of_app {
  transition: all 2s ease-in-out;
}
.head_text {
  font-size: 3rem;
  font-family: "Barlow", sans-serif;
  font-weight: 800;
  color: white;
}

.relex {
  /* background: linear-gradient(to right, #e8469f, #9969ff);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent; */
  animation: glowme 9s infinite;
  transition: all 0.3s ease-in-out;
  animation-delay: 0s;
}

.chill {
  /* background: linear-gradient(to right, #87e4eb, #69ffdc);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent; */
  animation: glowme2 9s infinite;
  transition: all 0.3s ease-in-out;
  animation-delay: 3s;
}

.code {
  /* background: linear-gradient(to right, #f5a628, #ffeb69);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent; */
  animation: glowme3 9s infinite;
  transition: all 0.3s ease-in-out;
  animation-delay: 6s;
}

@keyframes glowme {
  0% {
    background: linear-gradient(to right, #e8469f, #9969ff);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }
  100% {
    color: transparent;
    -webkit-text-stroke: 1px rgb(255, 255, 255);
  }
}

@keyframes glowme2 {
  0% {
    background: linear-gradient(to right, #87e4eb, #69ffdc);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }
  100% {
    color: transparent;
    -webkit-text-stroke: 1px rgb(255, 255, 255);
  }
}

@keyframes glowme3 {
  0% {
    background: linear-gradient(to right, #f5a628, #ffeb69);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }
  100% {
    color: transparent;
    -webkit-text-stroke: 1px rgb(255, 255, 255);
  }
}

.img_main {
  transition: all 0.4s linear;
}

.img_main:hover {
  transform: scale(1.04);
}

.img_main:active {
  transform: scale(0.96);
}

.build_with,
.name {
  font-size: 1rem;
  font-weight: 500;
  color: white;
}

.icons {
  display: flex;
}

@media (max-width: 745px) {
  .container {
    margin: 0px 0rem 0px 0rem;
  }
  .navbar {
    width: 100%;
    margin-left: 0rem !important;
    margin-right: 0rem !important;
  }

  .social {
    margin-right: 0.5rem;
  }
}

@media (max-width: 461px) {
  .head_text {
    font-size: 1.5rem;
    font-family: "Barlow", sans-serif;
    font-weight: 800;
    color: white;
  }
  .build_with,
  .name {
    font-size: 0.7rem;
    font-weight: 500;
    color: white;
  }

  .dot {
    color: white;
    font-size: 1.5rem;
  }
}

.custom-range {
  width: 100%;
  border-radius: 1rem;
  position: absolute;
  height: 8px;
  bottom: 1rem;
  opacity: 0.8;
  -webkit-appearance: none;
  background-color: rgba(186, 126, 62, 0.562);
  cursor: pointer;
}

input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  background-color: #ff6f00;
  opacity: 0.8;
  width: 15px;
  height: 15px;
  border-radius: 100%;
}

.custom-range::-webkit-slider-runnable-track {
  background-color: rgba(255, 166, 0, 0);
}

.custom-range::-webkit-slider-thumb {
  background-color: darkorange;
}

.custom-range::-moz-range-track {
  background-color: orange;
}

.custom-range::-moz-range-thumb {
  background-color: darkorange;
}

.custom-range::-ms-track {
  background-color: orange;
}

.custom-range::-ms-thumb {
  background-color: darkorange;
}

.custom-range::-ms-fill-lower {
  background-color: orange;
}

.loficard {
  position: relative;
}

.loficard::before {
  content: attr(meratitle);
  position: absolute;
  top: 50%; /* Adjust the distance from the image */
  left: 50%;
  transform: translateX(-50%);
  background-color: rgba(0, 179, 255, 0.338);
  color: white;
  padding: 4px 8px;
  border-radius: 4px;
  font-size: 1rem;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.2s ease-in-out;

  z-index: 200;
}

.loficard:hover::before {
  opacity: 1;
}

/* .loficard:active{
  box-shadow: 0px 0px 10px 10px rgba(0, 170, 255, 0.199);
} */

.active0 {
  box-shadow: 0px 0px 20px 10px rgba(23, 163, 184, 0.7);
  animation: twinkling 3s ease-in-out infinite;
}

.active1 {
  box-shadow: 0px 0px 20px 10px rgba(218, 112, 214, 0.7);
  animation: twinkling 3s ease-in-out infinite;
}

.active2 {
  box-shadow: 0px 0px 20px 10px rgba(86, 204, 242, 0.7);
  animation: twinkling 3s ease-in-out infinite;
}

.active3 {
  box-shadow: 0px 0px 20px 10px rgba(255, 184, 108, 0.7);
  animation: twinkling 3s ease-in-out infinite;
}

.active4 {
  box-shadow: 0px 0px 20px 10px rgba(253, 214, 165, 0.7);
  animation: twinkling 3s ease-in-out infinite;
}

.active5 {
  box-shadow: 0px 0px 20px 10px rgba(114, 208, 236, 0.7);
  animation: twinkling 3s ease-in-out infinite;
}

.active6 {
  box-shadow: 0px 0px 20px 10px rgba(140, 198, 63, 0.7);
  animation: twinkling 3s ease-in-out infinite;
}

.active7 {
  box-shadow: 0px 0px 20px 10px rgba(219, 131, 6, 0.7);
  animation: twinkling 3s ease-in-out infinite;
}

.active8 {
  box-shadow: 0px 0px 20px 10px rgba(117, 200, 204, 0.7);
  animation: twinkling 3s ease-in-out infinite;
}

@keyframes twinkling {
  0% {
    box-shadow: 0px 0px 20px 10px rgba(23, 163, 184, 0.7);
  }
  50% {
    box-shadow: 0px 0px 20px 10px rgba(218, 112, 214, 0.7);
  }
  100% {
    box-shadow: 0px 0px 20px 10px rgba(23, 163, 184, 0.7);
  }
}

.timer_text {
  font-size: 1rem;
  color: rgba(255, 255, 255, 0.653);
  font-weight: 800;
}

.todomodel,.notes-textarea {
  background: rgba(255, 255, 255, 0.08);
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(6.7px);
  -webkit-backdrop-filter: blur(6.7px);
}

.ant-modal-content {
  background: rgba(255, 255, 255, 0.06) !important;
  border-radius: 16px !important;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1) !important;
  backdrop-filter: blur(10px) !important;
  -webkit-backdrop-filter: blur(10px) !important;
  border: 1px solid rgba(255, 255, 255, 0.3) !important;
}

.ant-modal-title {
  background-color: #ffffff4e !important;
  display: none !important;
}

.notes-textarea{
  width: 100%;
  height: 100%;
  border: none;
  padding: 1rem;
  color: white;

  font-size: 1rem;
  font-weight: 700;
  
}


.ant-btn {
  display: none !important;
}

.ant-modal-close-x {
  display: none !important;
}

